tests/testfiles/passing/invalid_identifiers/keyword_as_id_unsigned.c
/* Keyword as identifier: unsigned */
int main() {
    int unsigned;
    unsigned = 42;
}